# Rubik-s-Cube-Solver

./: .gitignore  LICENSE  README.md  setup.py
client/: .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
client/src/rubik_cube_websocket_client/: client.py
client/test/: client_test.py  conftest.py
embedded/: main.py
playground/: main.py
server/: .coveragerc  .pre-commit-config.yaml  README.md  dev-requirements.txt  pyproject.toml  (+2 more)
solver/: .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
solver/src/: cube.py
solver/src/cube_rotation/: face_stickers_rotation.py  move.py  rotator.py  side_stickers_rotation.py
solver/src/enums/: Layer.py
solver/src/rubik_cube_solver/: cube.py
solver/src/rubik_cube_solver/cube_rotation/: face_stickers_rotation.py  move.py  rotator.py  side_stickers_rotation.py
solver/src/rubik_cube_solver/enums/: Color.py  Direction.py  EdgePosition.py  Layer.py
solver/src/rubik_cube_solver/scramble/: scrambler.py
solver/src/rubik_cube_solver/validator/: corner_validation.py  validator.py  validator_constants.py  validator_utils.py
solver/src/scramble/: scrambler.py
solver/src/solver/: main.py
solver/src/solver/cube_rotation/: face_stickers_rotation.py  side_stickers_rotation.py
solver/src/solver/enums/: EdgePosition.py
solver/test/cube/: conftest.py  cube_test.py
solver/test/cube_rotation/: conftest.py  face_stickers_rotation_test.py  move_test.py  rotator_test.py  side_stickers_rotation_test.py
solver/test/scramble/: conftest.py  scrambler_test.py
solver/test/solver/cube_rotation/: conftest.py  side_stickers_rotation_test.py
solver/test/validator/: conftest.py  validator_integration_test.py  validator_test.py  validator_utils_test.py
(+67 files in other folders)
